# HiromiEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
assets/shaders/compiled/: mesh.frag.msl  mesh.vert.msl  sprite.frag.msl  sprite.vert.msl
assets/shaders/src/: mesh.frag.glsl  mesh.vert.glsl  sprite.frag.glsl  sprite.vert.glsl
docs/: architecture.md
engine/: CMakeLists.txt
engine/components/: AnimationState.hpp  AudioSource.hpp  Camera.hpp  Mesh.hpp  RigidBody2D.hpp  Sprite.hpp  Transform.hpp
engine/core/: Assert.hpp  Logger.hpp  Types.hpp
engine/ecs/: Archetype.hpp  ArchetypeStorage.cpp  ArchetypeStorage.hpp  ComponentPool.hpp  ComponentPoolFactory.hpp  ComponentTypeId.hpp  EntityId.hpp  Query.hpp  Query.inl  System.hpp  World.cpp  World.hpp  World.inl
engine/engine/: Engine.cpp  Engine.hpp
engine/input/: InputState.cpp  InputState.hpp
engine/renderer/: GPUPipelineCache.cpp  GPUPipelineCache.hpp  IRenderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  ShaderLoader.cpp  ShaderLoader.hpp
engine/scene/: Scene.cpp  Scene.hpp
engine/systems/: AnimationSystem.cpp  AnimationSystem.hpp  InputSystem.cpp  InputSystem.hpp  PhysicsSystem2D.cpp  PhysicsSystem2D.hpp  RenderSystem2D.cpp  RenderSystem2D.hpp  RenderSystem3D.cpp  RenderSystem3D.hpp  TransformSystem.cpp  TransformSystem.hpp
example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ecs.cpp  test_query.cpp
